# codebase

./: CMakeLists.txt  README.md  main.cpp
include/: CScopedTimer.hpp  GenericMessages.hpp  StringHelpers.hpp
include/TinyGLViz/: CCamera.hpp  CDualQuaternion.hpp  CGLGeometry.h  CGLLight.hpp  CGLPrimitive.hpp  CGLShader.hpp  CMaterial.hpp  COpenGLViewport.hpp  COpenGLVisualizer.hpp  CQuaternion.hpp  CTextDrawer.hpp  CVector3.hpp  Transform.h  Types.h
include/TinyGLViz/primitives/: CParticleSystem.h  CReferenceFrame.h  CSolidArrow.h  CSolidBox.h  CSolidCapsule.h  CSolidCone.h  CSolidCylinder.h  CSolidLine.h  CSolidSphere.h  GLPointCloud.h
include/TinyGLViz/shaders/: indicesTextureColorNormal.frag  text.frag  text.vs
src/: main.cpp
